--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,10 @@
 <ion-header>
-  <ion-toolbar color="secondary">
-    <!-- <ion-buttons slot="start">
-      <ion-back-button defaultHref="/list"></ion-back-button>
-    </ion-buttons> -->
-    <ion-title>
-      Home
-    </ion-title>
-  </ion-toolbar>
+    <ion-toolbar color="secondary">
+        <ion-buttons slot="start">
+            <ion-back-button defaultHref="/list"></ion-back-button>
+        </ion-buttons>
+        <ion-title> Home </ion-title>
+    </ion-toolbar>
 </ion-header>
 
-<ion-content>
- 
-</ion-content>
+<ion-content> </ion-content>
