--- a/src/app/list/list.page.html
+++ b/src/app/list/list.page.html
@@ -37,5 +37,7 @@
         </ion-item-sliding>
     </ion-list>
 
-    <ion-button (click)="toggleDarkMode()">Turn lights off and on</ion-button>
+    <ion-button data-cy="dark-toggle" (click)="toggleDarkMode()"
+        >Turn lights off and on</ion-button
+    >
 </ion-content>
